Implement Misc & Logging API (#205)
* Misc API functions
* Log API Functions